@@ -65,9 +65,10 @@
 
  Other changes:
 
+   - myIWindow::hide_on_close: removed property (todo #1111).
    - ofa_account_frame_bin_get_account_store(): new method.
    - ofa_ope_template_frame_bin_get_ope_template_store(): new method.
-   - myIWindow::hide_on_close: removed property (todo #1111).
+   - ofaTreeStore: moved to core library (todo #1130).
 
 -----------------------------------------------------------------------
  Version 0.56
